repos/test-emily-game/contents/sample/test/macro/fail/checkUndefined.em
# // operator failure case: Checking from invalid object
# Expect failure

x = [ y = [ z = 3 ] ]

println ( x.q.z // 4 )
